--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@ https://templatemo.com/tm-540-lava-landing-page
                             <li class="scroll-to-section"><a href="#about" class="menu-item">About</a></li>
                             <li class="scroll-to-section"><a href="#gallery" class="menu-item">Gallery</a>
                             </li>
+                            <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Eminent Members</a>
+                            </li>
+
                             <li class="scroll-to-section"><a href="#events" class="menu-item">Activities</a>
                             </li>
                             <li class="submenu">
@@ -77,7 +80,7 @@ https://templatemo.com/tm-540-lava-landing-page
             </div>
         </div>
     </header>
-    <!-- ***** Header Area End ***** -->
+    <!-- ***** Header Area End ***** --> 
 
 
     <!-- ***** Welcome Area Start ***** -->
@@ -222,7 +225,7 @@ https://templatemo.com/tm-540-lava-landing-page
                     <div class="owl-carousel owl-theme">
                         <div class="item service-item">
                             <div class="author">
-                                <i><img src="assets/images/person.png" alt="Author One"></i>
+                                <i><img src="assets/images/person1.png" alt="President"></i>
                             </div>
                             <div class="testimonial-content">
                                 <ul class="stars">
@@ -232,15 +235,15 @@ https://templatemo.com/tm-540-lava-landing-page
                                     <li><i class="fa fa-star"></i></li>
                                     <li><i class="fa fa-star"></i></li>
                                 </ul>
-                                <h4>Person Name</h4>
+                                <h4>श्री अरुण प्रताप सिंह</h4>
                                 <p>“Nullam hendrerit, elit a semper pharetra, ipsum nibh tristique tortor, in tempus
                                     urna elit in mauris.”</p>
-                                <span>Position in Organization</span>
+                                <span>(अध्यक्ष)</span>
                             </div>
                         </div>
                         <div class="item service-item">
                             <div class="author">
-                                <i><img src="assets/images/person.png" alt="Second Author"></i>
+                                <i><img src="assets/images/person2.png" alt="Vice President"></i>
                             </div>
                             <div class="testimonial-content">
                                 <ul class="stars">
@@ -250,15 +253,15 @@ https://templatemo.com/tm-540-lava-landing-page
                                     <li><i class="fa fa-star"></i></li>
                                     <li><i class="fa fa-star"></i></li>
                                 </ul>
-                                <h4>Person Name</h4>
+                                <h4>श्री विनय द्विवेदी</h4>
                                 <p>“Morbi non mi luctus felis molestie scelerisque. In ac libero viverra, placerat est
                                     interdum, rhoncus leo.”</p>
-                                <span>Position in Organization</span>
+                                <span>(उपाध्यक्ष)</span>
                             </div>
                         </div>
                         <div class="item service-item">
                             <div class="author">
-                                <i><img src="assets/images/person.png" alt="Author Third"></i>
+                                <i><img src="assets/images/person3.png" alt="Sec"></i>
                             </div>
                             <div class="testimonial-content">
                                 <ul class="stars">
@@ -266,15 +269,31 @@ https://templatemo.com/tm-540-lava-landing-page
                                     <li><i class="fa fa-star"></i></li>
                                     <li><i class="fa fa-star"></i></li>
                                 </ul>
-                                <h4>Person Name</h4>
+                                <h4>श्रीमती अनीता वर्मा</h4>
                                 <p>“Fusce rutrum in dolor sit amet lobortis. Ut at vehicula justo. Donec quam dolor,
                                     congue a fringilla sed, maximus et urna.”</p>
-                                <span>Position in Organization</span>
+                                <span>(सचिव)</span>
                             </div>
                         </div>
                         <div class="item service-item">
                             <div class="author">
-                                <i><img src="assets/images/person.png" alt="Fourth Author"></i>
+                                <i><img src="assets/images/person4.png" alt="कोषाध्यक्ष"></i>
+                            </div>
+                            <div class="testimonial-content">
+                                <ul class="stars">
+                                    <li><i class="fa fa-star"></i></li>
+                                    <li><i class="fa fa-star"></i></li>
+                                    <li><i class="fa fa-star"></i></li>
+                                </ul>
+                                <h4>श्री सन्दीप शुक्ला</h4>
+                                <p>“Fusce rutrum in dolor sit amet lobortis. Ut at vehicula justo. Donec quam dolor,
+                                    congue a fringilla sed, maximus et urna.”</p>
+                                <span>(कोषाध्यक्ष)</span>
+                            </div>
+                        </div>
+                        <div class="item service-item">
+                            <div class="author">
+                                <i><img src="assets/images/person5.png" alt="उपसचिव"></i>
                             </div>
                             <div class="testimonial-content">
                                 <ul class="stars">
@@ -283,10 +302,10 @@ https://templatemo.com/tm-540-lava-landing-page
                                     <li><i class="fa fa-star"></i></li>
                                     <li><i class="fa fa-star"></i></li>
                                 </ul>
-                                <h4>Person Name</h4>
+                                <h4>श्रीमती उमा सिंह</h4>
                                 <p>"Fusce rutrum in dolor sit amet lobortis. Ut at vehicula justo. Donec quam dolor,
                                     congue a fringilla sed, maximus et urna."</p>
-                                <span>Position in Organization</span>
+                                <span>(उपसचिव)</span>
                             </div>
                         </div>
                     </div>
@@ -327,8 +346,7 @@ https://templatemo.com/tm-540-lava-landing-page
                                     </div>
                                     <div class="col-lg-12">
                                         <fieldset>
-                                            <button type="submit" id="form-submit" class="main-button">Send Message
-                                                Now</button>
+                                            <button type="submit" id="form-submit" class="main-button">Send Message</button>
                                         </fieldset>
                                     </div>
                                 </div>
