--- a/index.html
+++ b/index.html
@@ -368,9 +368,7 @@ https://templatemo.com/tm-540-lava-landing-page
             <div class="row">
                 <div class="col-lg-12">
                     <div class="sub-footer">
-                        <p>Copyright &copy; माँ गायत्री जन सेवा संस्थान
-
-                        | Designed by Akshita Awasthi</p>
+                        <p>Copyright &copy; माँ गायत्री जन सेवा संस्थान</p>
                     </div>
                 </div>
             </div>
